@@ -1,5 +1,6 @@
 #### Don't forget to change the version number in configure.ac! ####
 
+19 Aug 2003 Committed Jim Pierson's "-g -O2" optimization flags fix - Fish
 19 Aug 2003 Fix dasdtab to provide correct model numbers for
             sense ID on 3340-1 (35M) and 3340-2 (70M) - Ivan Warren
 19 Aug 2003 Removed W32 only symbol from linux build in ctcadpt - Ivan Warren
